# ultimate-stellar

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test-e2e-v1.py  test-e2e-v1.sh  test-e2e-v2.py  test-e2e-v2.sh
contracts/company/: Cargo.toml
contracts/company/src/: lib.rs  storage.rs
contracts/paygo/: Cargo.toml
contracts/paygo/src/: error.rs  errors.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/paygo/src/models/: company.rs  employee.rs  mod.rs
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
features/: environment.py  example.feature  payroll.feature
features/steps/: example_steps.py  payroll_steps.py
paygo/: mod.rs
paygo/company/: add_employee.rs  fund.rs  get_cost.rs  get_owner.rs  pay_then.rs  register.rs
src/stellar_e2e/: __init__.py
tests/: balance.py  buy_token.py  create_contract.py  install_contract.py  token.py  tx_data.py
